[metadata]
name = ArZypher
version = attr: ArZypher.__version__
author = Andres
author_email = andres@arz.ai
description = int params b64-encoded for friendly url
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cypher, base64, encoder, url
[options]
zip_safe = True
include_package_data = True
